--- a/S4STests/package.json
+++ b/S4STests/package.json
@@ -11,26 +11,18 @@
   },
   "devDependencies": {
     "babel": "6.23.0",
-    "babel-core": "^6.26.3",
+    "babel-core": "6.26.0",
     "babel-jest": "22.1.0",
     "babel-polyfill": "6.26.0",
-    "babel-preset-env": "^1.7.0",
+    "babel-preset-env": "1.6.1",
     "babel-preset-es2015": "6.24.1",
     "babel-preset-react": "6.24.1",
     "jasmine-fail-fast": "2.0.0",
-    "nodemon": "^1.18.4"
+    "nodemon": "1.14.11"
   },
   "scripts": {
     "test": "jest"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/JayAdjust/S4STests.git"
-  },
-  "author": "Jeremy Anderson",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/JayAdjust/S4STests/issues"
-  },
-  "homepage": "https://github.com/JayAdjust/S4STests#readme"
+  "author": "Tung Pham",
+  "license": "ISC"
 }
