--- a/S4STests/package.json
+++ b/S4STests/package.json
@@ -7,6 +7,7 @@
     "faker": "4.1.0",
     "fs": "0.0.1-security",
     "jest": "22.1.4",
+    "jest-puppeteer": "^3.3.1",
     "puppeteer": "1.0.0"
   },
   "devDependencies": {
